tests/ui/consts/const-eval/union-const-eval-field.stderr
error[E0080]: using uninitialized data, but this operation requires initialized memory
  --> $DIR/union-const-eval-field.rs:28:37
   |
LL |     const FIELD3: Field3 = unsafe { UNION.field3 };
   |                                     ^^^^^^^^^^^^ evaluation of `read_field3::FIELD3` failed here

note: erroneous constant encountered
  --> $DIR/union-const-eval-field.rs:30:5
   |
LL |     FIELD3
   |     ^^^^^^

note: erroneous constant encountered
  --> $DIR/union-const-eval-field.rs:30:5
   |
LL |     FIELD3
   |     ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
